--- a/environment/playbooks/python.yml
+++ b/environment/playbooks/python.yml
@@ -1,37 +1,39 @@
 ---
 - hosts: pis
+  vars:
+    powerjoular_version: bd0dcddb4b501cfd00c79a13cfba1e1ace6a7ff0
   tasks:
     - name: Basic Python packages
       become: true
       apt:
         update_cache: yes
         name:
-          - python3-distutils
-          - python3-apt
-          - python3-dev
+          - python3-distutils==3.9.2-1
+          - python3-apt==2.2.1
+          - python3-dev==3.9.2-3
         state: present
 
     - name: Time
       become: true
       apt:
-        name: time
+        name: time==1.9-0.1
         state: present
 
     - name: PowerJoular Dependencies
       become: true
       apt:
         name:
-          - gnat
-          - gprbuild
-          - libgnatcoll19-dev
-          - git
+          - gnat==10.1
+          - gprbuild==2021.0.0.0778b109-5
+          - libgnatcoll19-dev==21.0.0-4
+          - git==1:2.30.2-1
         state: present
 
     - name: Clone Powerjoular
       git:
         repo: 'https://gitlab.com/joular/powerjoular.git'
         dest: /tmp/powerjoular
-        version: bd0dcddb4b501cfd00c79a13cfba1e1ace6a7ff0
+        version: {{ powerjoular_version }}
 
     - name: Make dir
       file:
