--- a/environment/playbooks/docker.yml
+++ b/environment/playbooks/docker.yml
@@ -23,6 +23,7 @@
         - docker
 
     - name: Set up the stable repository
+      become: true
       shell: >
         echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" \
         | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
