--- a/environment/playbooks/docker.yml
+++ b/environment/playbooks/docker.yml
@@ -8,10 +8,10 @@
         state: present
         update_cache: yes
       with_items:
-        - gnupg==2.2.27-3ubuntu2.1
-        - ca-certificates==20211016
-        - curl==7.81.0-1ubuntu1.6
-        - lsb-release==11.1.0ubuntu4
+        - gnupg=2.2.27-3ubuntu2.1
+        - ca-certificates=20211016
+        - curl=7.81.0-1ubuntu1.6
+        - lsb-release=11.1.0ubuntu4
       tags:
         - docker
 
@@ -42,9 +42,9 @@
         state: present
         update_cache: yes
       with_items: 
-        - docker-ce==5:20.10.21~3-0~ubuntu-focal
-        - docker-ce-cli==5:20.10.21~3-0~ubuntu-focal
-        - containerd.io==1.6.9-1
-        - docker-compose-plugin==2.12.2~ubuntu-focal
+        - docker-ce=5:20.10.21~3-0~ubuntu-focal
+        - docker-ce-cli=5:20.10.21~3-0~ubuntu-focal
+        - containerd.io=1.6.9-1
+        - docker-compose-plugin=2.12.2~ubuntu-focal
       tags:
         - docker
