--- a/environment/playbooks/docker.yml
+++ b/environment/playbooks/docker.yml
@@ -22,11 +22,10 @@
       tags:
         - docker
 
-    - name: Set up the stable repository
-      become: true
-      shell: >
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" \
-        | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+     name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu focal stable
+        state: present
       tags:
         - docker
 
