--- a/environment/playbooks/docker.yml
+++ b/environment/playbooks/docker.yml
@@ -22,7 +22,7 @@
       tags:
         - docker
 
-     name: Add Docker Repository
+    - name: Add Docker Repository
       apt_repository:
         repo: deb https://download.docker.com/linux/ubuntu focal stable
         state: present
