--- a/environment/playbooks/wasmtime.yml
+++ b/environment/playbooks/wasmtime.yml
@@ -6,7 +6,7 @@
     - name: Dependency curl
       become: true
       apt:
-        name: curl==7.74.0-1.3+deb11u3
+        name: curl=7.74.0-1.3+deb11u3
         state: present
 
     - name: Install wasmer # the dirty way: not really idempotent :/
