--- a/environment/playbooks/docker.yml
+++ b/environment/playbooks/docker.yml
@@ -8,10 +8,10 @@
         state: present
         update_cache: yes
       with_items:
-        - gnupg
-        - ca-certificates
-        - curl
-        - lsb-release
+        - gnupg=2.2.27-3ubuntu2.1
+        - ca-certificates=20211016
+        - curl=7.81.0-1ubuntu1.6
+        - lsb-release=11.1.0ubuntu4
       tags:
         - docker
 
@@ -22,10 +22,10 @@
       tags:
         - docker
 
-    - name: Set up the stable repository
-      shell: >
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" \
-        | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu focal stable
+        state: present
       tags:
         - docker
 
@@ -41,9 +41,16 @@
         state: present
         update_cache: yes
       with_items: 
-        - docker-ce 
-        - docker-ce-cli 
-        - containerd.io 
-        - docker-compose-plugin
+        - docker-ce=5:20.10.21~3-0~ubuntu-focal
+        - docker-ce-cli=5:20.10.21~3-0~ubuntu-focal
+        - containerd.io=1.6.9-1
+        - docker-compose-plugin=2.12.2~ubuntu-focal
       tags:
         - docker
+
+    - name: Add "{{ ansible_env.SUDO_USER }}" to docker group
+      become: yes
+      user:
+        name: "{{ ansible_env.SUDO_USER }}"
+        groups: docker
+        append: yes
