--- a/environment/inventory/pi.ini
+++ b/environment/inventory/pi.ini
@@ -1,5 +1,6 @@
 [pis]
-pi4 ansible_host=192.168.178.199
+pi3Plus ansible_host=192.168.178.108
+pi3Minus ansible_host=192.168.178.130
 
 [pis:vars]
 ansible_user=pi
